# CS101

./: CMakeLists.txt  ass2.c  ass3.c  ass3.h  ass4.c  ass4.h  calc.c  hexToInt_Show.c  main.c  stam.c
HomeWork/: ass2.c  stam.c
ass4/: ass4.c  ass4.h  main.c
ass5/: ass5.c  ass5.h  element.c  element.h  main.c  queue.c  queue.h  stack.c  stack.h  strings.c  stuck.c
ass5/headers/: stuck.h
ass6/: binTree.c  binTree.h  data.c  data.h  dictionary.c  dictionary.h  entry.c  entry.h  globals.h  main.c  makefile  result.h
ass7/: ass7.py  result.csv
student_list_exmp/: StudentItem.c  StudentItem.h  StudentList.c  StudentList.h  main.c  student.c  student.h
