cmake_minimum_required(VERSION 3.15)
project(HomeWork C)

set(CMAKE_C_STANDARD 99)
#add_executable(HomeWork ass5/main.c ass5/stack.c ass5/queue.c ass5/strings.c ass5/element.c)
add_executable(HomeWork student_list_exmp/main.c student_list_exmp/student.c student_list_exmp/StudentItem.c student_list_exmp/StudentList.c)